--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production --verbose"
   },
   "repository": {
     "type": "git",
@@ -25,11 +25,15 @@
     "babel-preset-react": "^6.24.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
     "webpack": "^4.0.0",
     "webpack-cli": "^2.0.8",
     "webpack-dev-server": "^3.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@heroku/react-hk-components": "^0.6.0",
+    "@heroku/react-malibu": "^3.2.0",
+    "react-hot-loader": "^4.0.0"
+  }
 }
